# ComfyUI-Lorahelper

./: .gitignore  LH_Chat.py  LH_LlamaInstruct.py  LH_Utils.py  LICENSE.txt  Logic_Flowchart.md  Lorahelper_workflow_example.json  README.md  __init__.py  pyproject.toml  readme.txt  requirements.txt  switch_lang.py  推荐指令.txt  编码逻辑说明.txt
.github/workflows/: publish.yml
web/: lh_simpletext.js  monitor.js
web/js/: lh_locale.js  monitor.js.bak
wildcards/: 颜色.txt
